[gd_scene load_steps=2 format=2]

[ext_resource path="res://Modal/Settings.gd" type="Script" id=1]

[node name="Settings" type="PanelContainer"]
anchor_bottom = 1.0
margin_right = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 253.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsList" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/SettingsList"]
margin_right = 236.0
margin_bottom = 20.0

[node name="Close" type="Button" parent="Panel/SettingsList/HBoxContainer"]
margin_right = 47.0
margin_bottom = 20.0
text = "Close"

[node name="Logout" type="Button" parent="Panel/SettingsList"]
margin_top = 24.0
margin_right = 236.0
margin_bottom = 44.0
text = "Logout"

[node name="CreateRoom" type="Button" parent="Panel/SettingsList"]
margin_top = 48.0
margin_right = 236.0
margin_bottom = 68.0
text = "Create Room"

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="Panel/SettingsList/HBoxContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Panel/SettingsList/Logout" to="." method="_on_Logout_pressed"]
[connection signal="pressed" from="Panel/SettingsList/CreateRoom" to="." method="_on_CreateRoom_pressed"]
